add gpio test, here we control a moto through gpio 284

--- a/res/test_config.cfg
+++ b/res/test_config.cfg
@@ -66,6 +66,12 @@ activated   = 1
 category    = 0
 run_type    = 1
 
+[moto]
+display_name= "moto"
+activated   = 1
+category    = 0
+run_type    = 1
+
 [sim]
 display_name= "sim"
 activated   = 1
