--- a/res/test_config.cfg
+++ b/res/test_config.cfg
@@ -60,6 +60,12 @@ category    = 0
 run_type    = 1
 module_args = "20121113.160145"
 
+[backlight]
+display_name= "backlight"
+activated   = 1
+category    = 0
+run_type    = 1
+
 [light_sensor]
 display_name= "light_sensor"
 activated   = 1
